# homepanel

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/homepanel-agent/: Cargo.toml
crates/homepanel-agent/src/: lib.rs  main.rs  state.rs
crates/homepanel-agent/src/api/: mod.rs  protocol.rs  unix_socket.rs
crates/homepanel-agent/src/pty/: manager.rs  mod.rs  process.rs  scrollback.rs  session.rs
crates/homepanel-agent/src/security/: mod.rs
crates/homepanel-core/: Cargo.toml
crates/homepanel-core/src/: config.rs  error.rs  lib.rs  protocol.rs  scrollback.rs  types.rs
crates/homepaneld/: Cargo.toml
crates/homepaneld/src/: app.rs  main.rs  state.rs
crates/homepaneld/src/api/: auth.rs  files.rs  logs.rs  mod.rs  overview.rs  servers.rs  services.rs  settings.rs  system.rs  terminals.rs
crates/homepaneld/src/auth/: middleware.rs  mod.rs  password.rs  sessions.rs
crates/homepaneld/src/config/: mod.rs
crates/homepaneld/src/db/: migrations.rs  mod.rs  models.rs
crates/homepaneld/src/static_files/: mod.rs
crates/homepaneld/src/ws/: mod.rs  system_metrics.rs  terminals.rs
deploy/: README.md  config.example.toml  homepanel.service
docs/: architecture.md  security.md  terminal-protocol.md
frontend/: TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/api/: auth.ts  client.ts  files.ts  overview.ts  servers.ts  services.ts  system.ts  terminals.ts
frontend/src/components/dashboard/: MetricCard.svelte  SystemSummary.svelte
frontend/src/components/files/: FileEditor.svelte  FileManager.svelte  PathPickerDialog.svelte
frontend/src/components/layout/: PageShell.svelte  Sidebar.svelte  Topbar.svelte
frontend/src/components/services/: ServiceActionDialog.svelte  ServiceCard.svelte  ServiceList.svelte
frontend/src/components/terminal/: NewTerminalDialog.svelte  TerminalTabs.svelte  TerminalToolbar.svelte  TerminalView.svelte
frontend/src/pages/: Dashboard.svelte  Files.svelte  Login.svelte  Logs.svelte  Servers.svelte  Services.svelte  Settings.svelte  Terminals.svelte
frontend/src/stores/: auth.ts  layout.ts  system.ts  terminals.ts
frontend/tests/: app.spec.ts
migrations/: 0001_initial.sql  0002_servers_v1.sql
packaging/scripts/: install.sh  uninstall.sh
packaging/systemd/: homepanel-agent.service  homepaneld.service
