[workspace]
members = [
  "crates/homepanel-core",
  "crates/homepaneld",
  "crates/homepanel-agent",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = "0.7"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hex = "0.4"
nix = { version = "0.29", features = ["signal", "process", "fs"] }
portable-pty = "0.8"
rand = "0.8"
regex = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate", "uuid", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
