[package]
name = "homepanel-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
futures.workspace = true
homepanel-core = { path = "../homepanel-core" }
nix.workspace = true
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[features]
default = []
